duniverse/menhirLib.20200211/test/static/bad/invalid-declarations-a.mly
%token <int> FOO
%token BAZ QUUX HOP
%token BAR int BAT /* error */

%%

main:
  FOO BAR

