duniverse/menhirLib.20200211/test/static/bad/invalid-declarations-a.exp
File "invalid-declarations-a.mly", line 3, characters 11-14:
Error: syntax error after 'BAR' and before 'int'.
Ill-formed '%token' declaration.
Examples of well-formed declarations:
  %token FOO
  %token BAR "|"
  %token DOT "." SEMICOLON ";"
  %token <string> LID UID
  %token FOO [@cost 0]
